--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
+    <meta name=application-name content="TBD"/>
+    <meta name=author content="LeastSussyImposter"/>
+    <meta name=description
+          content="TBD"/>
+    <meta name=viewport content="width=device-width"/>
+
+    <script src="main.js"></script>
+
     <title>LeastSussyImposter</title>
 </head>
+
+<link rel="stylesheet" href="main.css"/>
+
 <body>
-<p>Hello World :3</p>
+<p>
+    This page will contain some tools and goodies I work on.<br/>
+    Lots of WIP but hey give me some time :)
+</p>
+
+<p>
+    <a href="brb/index.html">BRB Overlay</a>
+</p>
+
 </body>
+
+<hr>
+
+<footer>
+    <p><a href="https://github.com/LeastSussyImposter/leastsussyimposter.github.io">Source code :3</a></p>
+</footer>
 </html>
