feat: styling and body fixing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <meta name=viewport content="width=device-width"/>
 
     <link rel="stylesheet" href="main.css"/>
-    <!--    <script src="main.js"></script>-->
 
     <title>LeastSussyImposter</title>
 </head>
@@ -18,18 +17,18 @@
 <body>
 <p>
     This page will contain some tools and goodies I work on.<br/>
-    Lots of WIP but hey give me some time :)
+    WIP but hey give me some time :)
 </p>
 
 <p>
     <a href="brb/index.html">BRB Overlay</a>
 </p>
 
-</body>
-
 <hr/>
 
 <footer>
     <p><a href="https://github.com/LeastSussyImposter/leastsussyimposter.github.io">Source code</a></p>
 </footer>
+
+</body>
 </html>
