--- a/brb/index.html
+++ b/brb/index.html
@@ -17,31 +17,7 @@
 
 <body>
 
-<h1>WIP! Nothing works yet :)</h1>
-
-<form name="brb">
-    <label for="channel-name">Channel:</label>
-    <input type="text" id="channel-name" name="channel-name" required placeholder="username"/>
-
-    <p>
-        <input type="checkbox" id="enable-7tv" checked/>
-        <label for="enable-7tv">Enable 7TV</label><br/>
-
-        <input type="checkbox" id="enable-ffz" checked/>
-        <label for="enable-ffz">Enable FFZ</label><br/>
-
-        <input type="checkbox" id="enable-bttv" checked/>
-        <label for="enable-bttv">Enable BTTV</label><br/>
-
-        <input type="checkbox" id="enable-pronouns" checked/>
-        <label for="enable-pronouns">Enable pronouns (<a href="https://pr.alejo.io">pr.alejo.io</a>)</label><br/>
-    </p>
-
-    <p>
-        <input name="copy" type="submit" value="Copy to clipboard"/>
-        <output id="copy-url" name="url"></output>
-    </p>
-</form>
+Alright
 
 <hr/>
 
